[package]
name = "simple_volume_knob"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

# Embassy
embassy-embedded-hal = { version = "0.5.0", features = ["defmt"] }
embassy-executor = { version = "0.9.1", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
] }
embassy-time = { version = "0.5.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-futures = { version = "0.1.2" }
embassy-rp = { version = "0.9.0", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp2040",
] }

# Logging
defmt = "1.0.1"
defmt-rtt = "1.0.0"

# Async debounce
async-debounce = "0.3.0"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"

# Network stuff, probably will not be needed
# reqwless = { version = "0.13.0", features = ["defmt"] }
# serde = { version = "1.0.203", default-features = false, features = ["derive"] }
# serde-json-core = "0.6.0"
# embassy-net = { version = "0.7.0", features = [
#     "defmt",
#     "icmp",
#     "tcp",
#     "udp",
#     "raw",
#     "dhcpv4",
#     "medium-ethernet",
#     "dns",
#     "proto-ipv4",
#     "proto-ipv6",
#     "multicast",
# ] }

[profile.release]
# Enable generation of debug symbols even on release builds
debug = true
